Fix elements being visible off-stage when scale < 1.

--- a/css/style.css
+++ b/css/style.css
@@ -26,4 +26,5 @@ body {
     bottom: 0;
     left: 0;
     display:none;
+    overflow:hidden;
 }
